--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,50 @@
-#heading{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 200px;
+}
+
+.nav-items > ul {
+    display: flex;
+    font-size: 24px;
+    list-style: none;
+}
+
+.nav-items >ul>li{
+    padding: 10px;
+    margin: 10px;
+}
+.nav-items{
+    padding-right: 90px;
+}
+.res-card{
+   
+    width: 185px;
+    padding: 5px;
+    margin: 5px;
+}
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+.res-container{
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.search{
+    padding: 10px;
+}
+.res-logo{
+    width: 100%;
+    
+}
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
